--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular2-material/input": "^2.0.0-alpha.6",
     "es6-shim": "0.35.1",
     "immutable": "^3.8.1",
+    "lodash": "^4.13.1",
     "material-design-lite": "^1.1.3",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
